--- a/src/scripts/components/page-results/style.styl
+++ b/src/scripts/components/page-results/style.styl
@@ -3,12 +3,12 @@
 
     background-color: $purple
 
-    .app-logo {
+    .logo {
         z-index 10
         position fixed
-        top 0
-        left 0
-        width 15%
+        top 20px
+        left 20px
+        width 180px
     }
 
     &__score {
